docs/rollback/actipm-opportunity-listviews/before/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Institucion__c</fullName>
        <label>Institución</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Razon_de_la_perdida__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CitiBanamex Priority</fullName>
                </value>
                <value>
                    <fullName>Premier de HSBC</fullName>
                </value>
                <value>
                    <fullName>Santader Select</fullName>
                </value>
                <value>
                    <fullName>Preferente de Banorte</fullName>
                </value>
                <value>
                    <fullName>Premium de Scotiabank</fullName>
                </value>
                <value>
                    <fullName>BBVA patrimonial y privada</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
                <value>
                    <fullName>Afirme</fullName>
                </value>
                <value>
                    <fullName>Allianz</fullName>
                </value>
                <value>
                    <fullName>AXA Seguros</fullName>
                </value>
                <value>
                    <fullName>Banorte</fullName>
                </value>
                <value>
                    <fullName>BBVA</fullName>
                </value>
                <value>
                    <fullName>BNP Paribas</fullName>
                </value>
                <value>
                    <fullName>BTG Pactual</fullName>
                </value>
                <value>
                    <fullName>BX+</fullName>
                </value>
                <value>
                    <fullName>Chubb</fullName>
                </value>
                <value>
                    <fullName>CI Casa de Bolsa</fullName>
                </value>
                <value>
                    <fullName>Citibanamex</fullName>
                </value>
                <value>
                    <fullName>Fóndika</fullName>
                </value>
                <value>
                    <fullName>GBM Plus</fullName>
                </value>
                <value>
                    <fullName>General de Seguros</fullName>
                </value>
                <value>
                    <fullName>GNP Seguros</fullName>
                </value>
                <value>
                    <fullName>HIR Compañía de Seguros</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>Inbursa</fullName>
                </value>
                <value>
                    <fullName>Insignia Life</fullName>
                </value>
                <value>
                    <fullName>Intercam</fullName>
                </value>
                <value>
                    <fullName>Invermerica Distribuidora de Fondos</fullName>
                </value>
                <value>
                    <fullName>Invex</fullName>
                </value>
                <value>
                    <fullName>IXE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InversionAcciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inversión acciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InversionCetes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inversión cetes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InversionFondos__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inversión fondos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inversion_Inicial__c</fullName>
        <label>Inversion Inicial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Menos de $500,000</fullName>
                </value>
                <value>
                    <fullName>Entre $500,000 y $1,500,000</fullName>
                </value>
                <value>
                    <fullName>Mas de $1,500,000</fullName>
                    <label>Más de $1,500,000</label>
                </value>
                <value>
                    <fullName>Más de $1,500,000</fullName>
                    <isActive>false</isActive>
                    <label>Más de $1,500,000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_From_MKT_Calculator__c</fullName>
        <formula>AND(
 CASESAFEID(CreatedById)  =  &quot;0055e000005hqg7AAA&quot;,
 NOT(CASESAFEID(Account.OwnerId) = &quot;0055e0000078BbjAAE&quot;),
 OR( 
    RecordType.DeveloperName  =  &quot;Planes_Beneficio_Fiscal&quot;,
    RecordType.DeveloperName  =  &quot;WalletShareOpportunity&quot;
 ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculadora MKT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_nea_de_acci_n__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asociación con línea de acción y oportunidad</description>
        <label>Línea de acción</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifyad24hours__c</fullName>
        <formula>Ultima_generacion_de_tarea__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifyad24hours</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Escalation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ultima fecha escalación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lo_contacto_el_asesor__c</fullName>
        <label>¿Lo contactó el asesor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MKT_Ahorro_Mensual__c</fullName>
        <label>Ahorro Mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MKT_Beneficio_Fiscal__c</fullName>
        <label>Beneficio Fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MKT_Calculator_Segment__c</fullName>
        <formula>IF(
  AND(Account.F3_Posicion_Global__c  &gt;= 5000, Account.F3_Posicion_Global__c   &lt;=  100000), &quot;Low&quot;,
  IF(
      AND(Account.F3_Posicion_Global__c  &gt;= 100001, Account.F3_Posicion_Global__c   &lt;=  500000), &quot;Medium&quot;,
      IF(
         Account.F3_Posicion_Global__c  &gt;= 500001, &quot;High&quot;, &quot;&quot;
      )
    )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_Edad__c</fullName>
        <label>Edad</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MKT_Monto_Objetivo__c</fullName>
        <label>Monto Objetivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MKT_Plazo_Objetivo__c</fullName>
        <label>Plazo Objetivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MKT_Tipo_Meta_Financiera__c</fullName>
        <label>Tipo de Meta Financiera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hogar​</fullName>
                </value>
                <value>
                    <fullName>Matrimonio​</fullName>
                </value>
                <value>
                    <fullName>Retiro​</fullName>
                </value>
                <value>
                    <fullName>Educación para Hijos​</fullName>
                </value>
                <value>
                    <fullName>Educación Personal​</fullName>
                </value>
                <value>
                    <fullName>Auto​</fullName>
                </value>
                <value>
                    <fullName>Vacaciones​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MKT_ahorro_PPR_actinver__c</fullName>
        <label>Ahorro con PPR Actinver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MKT_ahorro_extra__c</fullName>
        <label>Ahorro Extra</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migrada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo control para identificar las oportunidades migradas del flujo de prospectos de patrimonial</description>
        <label>Migrada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinutoEntreAsignadaCerradaPerdida__c</fullName>
        <formula>( Patrim_FechaCerradaPerdida__c -   PatrimFechaAsignadaOportunidad__c ) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos entre asignada y cerrada perdida</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosContactoInicCerradaGanada__c</fullName>
        <formula>( PatrimFechaCerradaGanada__c - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Cerrada Ganada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosContactoInicCerradaPerdida__c</fullName>
        <formula>(Patrim_FechaCerradaPerdida__c - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Cerrada Perdida</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosContactoInicFormalizacion__c</fullName>
        <formula>( FecFormalizacionValidacionOpp__c - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Formalización</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosContactoInicPresentacion__c</fullName>
        <formula>( FecPresentacionofertaOpp__c - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Presentacion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosContactoInicRecalendarizacion__c</fullName>
        <formula>( PatrimFechaDeRecalendarizaci_n__c  - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Recalendarizació</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosContactoInicSolicitar__c</fullName>
        <formula>( FechaSolicitardocumentacionOpp__c - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Solicitar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutos_Contacto_Inic_Identif__c</fullName>
        <formula>(Fecha_IdentificaciondeNecesidadesOpp__c - FechaContactoInicialOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Contacto Inic - Identif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutos_Identificar_Presentacion_de_Of__c</fullName>
        <formula>(FecPresentacionofertaOpp__c - Fecha_IdentificaciondeNecesidadesOpp__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutos Identificar - Presentacion de Of</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MontoEstimadoDeInversion__c</fullName>
        <label>Monto estimado de inversión</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_Ganadas__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;Cerrada Ganada&quot;), Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto Ganadas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_M_ximo_a_Deducir__c</fullName>
        <label>Monto Máximo a Deducir</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MotivoDeRechazo__c</fullName>
        <description>Motivo del rechazo de la oportunidad cerrada perdida</description>
        <label>Motivo de rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MotivoRechazoValues</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_No_Interesado__c</fullName>
        <description>Campo para ingresar el motivo de No interes del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Motivo (No Interesado)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_No_Oferta_Diagnostico__c</fullName>
        <label>Motivo de no Oferta</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ofrecio_Diagnostico__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Otra_Oferta_Meta_Financiera</fullName>
                    <label>Ya se hizo otra oferta</label>
                </value>
                <value>
                    <fullName>Cliento_no_mostro_interes</fullName>
                    <label>Cliente no nostró interés</label>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_de_Perdida_PM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Motivo de pérdida</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_de_p_rdida__c</fullName>
        <label>Razones por pérdida de oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>La solución tardo más de lo esperado( falta de seguimiento asesor)</fullName>
                </value>
                <value>
                    <fullName>No cumple las expectativas del Cliente (producto o solución inadecuado)</fullName>
                </value>
                <value>
                    <fullName>Falta de seguimiento áreas involucradas (excede el tiempo de respuesta por áreas que dan servicio a asesoría (Front), sobrepasa los SLA´s)</fullName>
                </value>
                <value>
                    <fullName>El cliente se fue con la competencia</fullName>
                </value>
                <value>
                    <fullName>No es atractiva la promoción / Costo</fullName>
                </value>
                <value>
                    <fullName>El paquete no se adapta a las necesidades del cliente</fullName>
                </value>
                <value>
                    <fullName>Fidelidad a su Broker / Aseguradora actual</fullName>
                </value>
                <value>
                    <fullName>No le interesa / No da motivo</fullName>
                </value>
                <value>
                    <fullName>Exclusión por condiciones generales</fullName>
                </value>
                <value>
                    <fullName>Malas experiencias con la aseguradora</fullName>
                </value>
                <value>
                    <fullName>No se respetaron las condiciones de la póliza actual</fullName>
                </value>
                <value>
                    <fullName>Su aseguradora es Mapfre</fullName>
                </value>
                <value>
                    <fullName>Tiempo de respuesta</fullName>
                </value>
                <value>
                    <fullName>Rechazo por no cumplir perfil de crédito.</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>No Cumple Expectativas del Cliente (Producto o Solución Inadecuado)</fullName>
                </value>
                <value>
                    <fullName>El Cliente se fue con la competencia. (Habilitar la opción de competencia)</fullName>
                </value>
                <value>
                    <fullName>La solución tardó más de lo esperado( falta de seguimiento asesor)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_de_perdidaPM__c</fullName>
        <label>Motivo de pérdida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Precio / condiciones no competitivas</fullName>
                </value>
                <value>
                    <fullName>Perdido con competidor</fullName>
                </value>
                <value>
                    <fullName>Cliente postergó la decisión</fullName>
                </value>
                <value>
                    <fullName>Producto no disponible o no aplicable</fullName>
                </value>
                <value>
                    <fullName>Relación comercial insuficiente</fullName>
                </value>
                <value>
                    <fullName>Cambio interno del cliente (reestructura, fusión, etc.)</fullName>
                </value>
                <value>
                    <fullName>Incumplimiento de requisitos (KYC, scoring, etc.)</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivos_de_interes_No_interes__c</fullName>
        <label>Motivos de interés / No interés</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cliente_interesado__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONDICIONES</fullName>
                </value>
                <value>
                    <fullName>ENTRADA TARDE</fullName>
                </value>
                <value>
                    <fullName>OTRO</fullName>
                </value>
                <value>
                    <fullName>OTRO INTERMEDIARIO</fullName>
                </value>
                <value>
                    <fullName>PRECIO</fullName>
                </value>
                <value>
                    <fullName>TIEMPO DE RESPUESTA</fullName>
                </value>
                <value>
                    <fullName>NO TIENE VEHÍCULO</fullName>
                </value>
                <value>
                    <fullName>Vigencias Retroactivas (sin excepción)</fullName>
                </value>
                <value>
                    <fullName>Unidades Ford modelos 2019-2026</fullName>
                </value>
                <value>
                    <fullName>Marcas Chinas (excepto CHIREY, JAC, JAECOO, MG, OMODA, SEV)</fullName>
                </value>
                <value>
                    <fullName>Autos Eléctricos (excepto BYD, TESLA)</fullName>
                </value>
                <value>
                    <fullName>Pólizas de Flotillas</fullName>
                </value>
                <value>
                    <fullName>Vehículos asegurados con Actinver Insurance Services</fullName>
                </value>
                <value>
                    <fullName>Pólizas de Zurich Aseguradora Mexicana</fullName>
                </value>
                <value>
                    <fullName>Vehículos en arrendamiento / endoso de beneficiario preferente</fullName>
                </value>
                <value>
                    <fullName>Pólizas Multianuales</fullName>
                </value>
                <value>
                    <fullName>Usos diferentes a Particular</fullName>
                </value>
                <value>
                    <fullName>Autos Legalizados / Fronterizos</fullName>
                </value>
                <value>
                    <fullName>Autos con más de 20 años</fullName>
                </value>
                <value>
                    <fullName>Cumple con requisitos para aplicar descuento</fullName>
                </value>
                <value>
                    <fullName>Sin BP Actinver</fullName>
                </value>
                <value>
                    <fullName>Igual o mayor a 65 años</fullName>
                </value>
                <value>
                    <fullName>Residente fuera de México</fullName>
                </value>
                <value>
                    <fullName>Profesión excluida</fullName>
                </value>
                <value>
                    <fullName>Persona en listas negras</fullName>
                </value>
                <value>
                    <fullName>Otro motivo</fullName>
                </value>
                <value>
                    <fullName>Evaluacion medica</fullName>
                </value>
                <value>
                    <fullName>Legalizados o fronterizos</fullName>
                </value>
                <value>
                    <fullName>Ubicación &lt;500m cuerpo de agua</fullName>
                </value>
                <value>
                    <fullName>Materiales constructivos diferntes a macizos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nacionalidad__c</fullName>
        <description>Campo integración SAP</description>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afgana</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Alandés</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albanesa</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>Alemana</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorrana</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angoleña</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antártida</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Argelina</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Arubeña</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australiana AU</label>
                </value>
                <value>
                    <fullName>CC</fullName>
                    <label>Australiana CC</label>
                </value>
                <value>
                    <fullName>CX</fullName>
                    <label>Australiana CX</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austríaca</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaiyana</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahameña</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahriní</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbadense</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belga</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Beliceña</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bengalí</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Beninesa</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermudeña</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Bielorrusa</label>
                </value>
                <value>
                    <fullName>MM</fullName>
                    <label>Birmana</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Boliviana</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnio</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botsuanesa</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>Brasileña</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nivel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the customer is not longer interested, will remove this opportunity two months later</description>
        <label>No Longer Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NombreRecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_prospecto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del prospecto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notas__c</fullName>
        <description>Campo para capturar notas de WM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_nomina_propietario__c</fullName>
        <formula>Owner.ID_ASESOR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de nomina propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objetivo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objetivo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ofrecio_Diagnostico__c</fullName>
        <label>¿Ofreció Diagnóstico?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OportunidadCreadaDeUnProspecto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para saber si la oportunidad fue creada de una conversión de prospecto, aplica para weatlh management</description>
        <label>Oportunidad creada de un prospecto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origen_cliente__c</fullName>
        <label>Origen del cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PL_Prima_Neta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prima Neta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Siguiente_paso__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Siguiente paso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_liza_de_seguros_relacionada__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Póliza de seguros relacionada</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pagina_origen__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Página origen</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>